--- a/pages/resultado/resultado.html
+++ b/pages/resultado/resultado.html
@@ -10,7 +10,7 @@
     <title>Quiz app</title>
 
 </head>
-<body>
+<body class="escuro">
     <header>
         <div class="assunto">
             <div class="assunto_ícone">
