--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div>
                     <img src="./assets/images/icon-javascript.svg" alt="ícone do JavaScript">
                 </div>
-                <span>JavaScript</span>
+                <span>Javascript</span>
             </button>
 
             <button class="botao_acessibilidade">
